FIX: sometimes failing tilbakemelding test